baseline bug fixes and survey 2/3 initial

--- a/web/base2line10.html
+++ b/web/base2line10.html
@@ -231,6 +231,7 @@
                 <p id="err198" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s10Fin">
+                <div id="progressbar10"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s10FinBtn" onClick="s10Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
