--- a/web/base2line9.html
+++ b/web/base2line9.html
@@ -317,6 +317,7 @@
                 <p id="err178" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s9Fin">
+                <div id="progressbar8"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s9FinBtn" onClick="s9Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
