--- a/web/baseline.html
+++ b/web/baseline.html
@@ -152,6 +152,7 @@
                 <p id="err10" class="errmsg"><b>Please enter an answer.</b></p>
             </div>
             <div id="s1Fin">
+                <div id="progressbar"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s1FinBtn" onClick="s1Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
