--- a/web/baseline13.html
+++ b/web/baseline13.html
@@ -75,7 +75,7 @@
                 <a href="#" id="q227Btn" onClick="q227()" class="ui-btn ui-corner-all btnSize2">Next</a>
             </div>
             <div id="228">
-                <img id="img5" src="resources/images/e12.jpg" />
+                <img id="img5" src="resources/images/f2.jpg" />
                 <div class="full-slide">
                     <input name="slide5" id="slide5" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide5" class="ui-hidden-accessible"></label>
@@ -155,7 +155,7 @@
                 <a href="#" id="q232Btn" onClick="q232()" class="ui-btn ui-corner-all btnSize2">Next</a>
             </div>
             <div id="233">
-                <img id="img10" src="resources/images/d6.jpg" />
+                <img id="img10" src="resources/images/a7.jpg" />
                 <div class="full-slide">
                     <input name="slide10" id="slide10" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide10" class="ui-hidden-accessible"></label>
@@ -251,6 +251,7 @@
                 <a href="#" id="q238Btn" onClick="q238()" class="ui-btn ui-corner-all btnSize2">Next</a>
             </div>
             <div id="s13Fin">
+                <div id="progressbar13"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s13FinBtn" onClick="s13Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
