--- a/web/baseline3.html
+++ b/web/baseline3.html
@@ -178,7 +178,7 @@
                 <p id="err40" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="41">
-                <p>Thinking about all the times that you thought about your suicide plan(s), on average, <strong>how seriously did you consider or intend on action on your suicide plan(s)</strong>?</p>
+                <p>Thinking about all the times that you thought about your suicide plan(s), on average, <strong>how seriously did you consider or intend on acting on your suicide plan(s)</strong>?</p>
                 <fieldset id="q41fd" data-role="controlgroup">
                     <input name="q41Op1" id="q41Op1" value="0" type="radio">
                     <label id="q41lb1" for="q41Op1" class="chkbox">0 Absolutely no intent/did not seriously consider acting on my plan(s) at all</label>
@@ -326,6 +326,7 @@
                 <p id="err46" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s3Fin">
+                <div id="progressbar3"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s3FinBtn" onClick="s3Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
