--- a/web/baseline4.html
+++ b/web/baseline4.html
@@ -81,6 +81,7 @@
                 <p id="err56" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="s4Fin">
+                <div id="progressbar4"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s4FinBtn" onClick="s4Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
