--- a/web/baseline5.html
+++ b/web/baseline5.html
@@ -423,6 +423,7 @@
                 <p id="err77" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s5Fin">
+                <div id="progressbar5"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s5FinBtn" onClick="s5Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
