--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,12 @@
     <link rel="apple-touch-icon" sizes="60x60" href="resources/images/tecicon-small.png"/>
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="resources/jquery-ui.min.css" />
+    <link rel="stylesheet" href="resources/jquery-ui.theme.min.css" />
     <link rel="stylesheet" href="resources/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" type="text/css" href="resources/style.css" />
     <script type="text/javascript" src="resources/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="resources/jquery-ui.min.js"></script>
     <script type="text/javascript" src="resources/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="resources/jquery.maskedinput.js"></script>
     <title>AMP Survey</title>
