--- a/web/base2line2.html
+++ b/web/base2line2.html
@@ -137,6 +137,7 @@
                 <p id="err30" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s2Fin">
+                <div id="progressbar2"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s2FinBtn" onClick="s2Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
