--- a/web/baseline11.html
+++ b/web/baseline11.html
@@ -263,6 +263,7 @@
                 <p id="err210" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s11Fin">
+                <div id="progressbar11"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s11FinBtn" onClick="s11Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
