--- a/web/baseline12.html
+++ b/web/baseline12.html
@@ -206,6 +206,7 @@
                 <p id="err223" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s12Fin">
+                <div id="progressbar12"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s12FinBtn" onClick="s12Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
