--- a/web/baseline6.html
+++ b/web/baseline6.html
@@ -197,6 +197,7 @@
                 <p id="err87" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s6Fin">
+                <div id="progressbar6"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s6FinBtn" onClick="s6Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
