--- a/web/baseline8.html
+++ b/web/baseline8.html
@@ -263,6 +263,7 @@
                 <p id="err160" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="s8Fin">
+                <div id="progressbar8"><div class="progress-label">Loading...</div></div>
                 <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
                 <a href="#" id="s8FinBtn" onClick="s8Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
             </div>
