finished all surveys and AMP

--- a/web/baseline13.html
+++ b/web/baseline13.html
@@ -16,7 +16,7 @@
                     <input name="slide1" id="slide1" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide1" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -32,7 +32,7 @@
                     <input name="slide2" id="slide2" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide2" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -48,7 +48,7 @@
                     <input name="slide3" id="slide3" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide3" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -64,7 +64,7 @@
                     <input name="slide4" id="slide4" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide4" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -80,7 +80,7 @@
                     <input name="slide5" id="slide5" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide5" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -96,7 +96,7 @@
                     <input name="slide6" id="slide6" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide6" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -112,7 +112,7 @@
                     <input name="slide7" id="slide7" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide7" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -128,7 +128,7 @@
                     <input name="slide8" id="slide8" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide8" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -144,7 +144,7 @@
                     <input name="slide9" id="slide9" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide9" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -160,7 +160,7 @@
                     <input name="slide10" id="slide10" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide10" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -176,7 +176,7 @@
                     <input name="slide11" id="slide11" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide11" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -192,7 +192,7 @@
                     <input name="slide12" id="slide12" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide12" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -208,7 +208,7 @@
                     <input name="slide13" id="slide13" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide13" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -224,7 +224,7 @@
                     <input name="slide14" id="slide14" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide14" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
@@ -240,7 +240,7 @@
                     <input name="slide15" id="slide15" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
                     <label for="slide15" class="ui-hidden-accessible"></label>
                 </div>
-                <div>
+                <div class="wrap">
                     <div class="left">
                         <p>Extremely Unpleasant</p>
                     </div>
