--- a/web/index.html
+++ b/web/index.html
@@ -52,8 +52,7 @@
             <li>The real-life word or image simply serves as a warning that the Chinese character is about to appear.  <ins>Ignore</ins> the real-life word or image.</li>
             <li>Your task is to use your GUT FEELING to <ins>judge</ins> whether the Chinese character was more pleasant or more unpleasant.</li>
         </ul>
-        <a href="#" id="instBtn2" onClick="testSur()" class="ui-btn ui-icon-carat-r ui-corner-all ui-btn-icon-right btnSize"><span data-translate="How to Play">Start Task</span></a>
-        <!-- <a href="#amp" id="instBtn2" data-transition="slide" class="ui-btn ui-icon-carat-r ui-corner-all ui-btn-icon-right btnSize"><span data-translate="How to Play">Start Task</span></a> -->
+        <a href="#amp" id="instBtn2" data-transition="slide" class="ui-btn ui-icon-carat-r ui-corner-all ui-btn-icon-right btnSize"><span data-translate="How to Play">Start Task</span></a>
     </div>
 </div>
 <div data-role="page" id="amp" data-theme="a">
