--- a/web/baseline4.html
+++ b/web/baseline4.html
@@ -22,25 +22,25 @@
                 <p id="err47" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="48">
-                <label for="times">How many times in the <strong>past week</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took an action?</label>
+                <label for="times">How many times in the <strong>past week</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took any action?</label>
                 <input name="times1" id="times" pattern="[0-9]*" type="number" placeholder="times in the past week">
                 <a href="#" id="q48Btn" onClick="q48()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err48" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="49">
-                <label for="times1">How many episodes in the <strong>past month</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took an action?</label>
+                <label for="times1">How many episodes in the <strong>past month</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took any action?</label>
                 <input name="times2" id="times1" pattern="[0-9]*" type="number" placeholder="times in the past month">
                 <a href="#" id="q49Btn" onClick="q49()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err49" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="50">
-                <label for="times2">How many episodes in the <strong>past year</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took an action?</label>
+                <label for="times2">How many episodes in the <strong>past year</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took any action?</label>
                 <input name="times3" id="times2" pattern="[0-9]*" type="number" placeholder="times in the past year">
                 <a href="#" id="q50Btn" onClick="q50()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err50" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="51">
-                <label for="times3">How many episodes in <strong>your life</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took an action?</label>
+                <label for="times3">How many episodes in <strong>your life</strong> have you been <strong>very close to killing yourself and in the last minute, you stopped yourself</strong> before you took any action?</label>
                 <input name="times4" id="times3" pattern="[0-9]*" type="number" placeholder="times in my lifetime">
                 <a href="#" id="q51Btn" onClick="q51()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err51" class="errmsg"><b>Please enter a valid number.</b></p>
@@ -57,25 +57,25 @@
                 <p id="err52" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="53">
-                <label for="times4">How many times in the <strong>past week</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took an action?</label>
+                <label for="times4">How many times in the <strong>past week</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took any action?</label>
                 <input name="times5" id="times4" pattern="[0-9]*" type="number" placeholder="times in the past week">
                 <a href="#" id="q53Btn" onClick="q53()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err53" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="54">
-                <label for="times5">How many times in the <strong>past month</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took an action?</label>
+                <label for="times5">How many times in the <strong>past month</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took any action?</label>
                 <input name="times6" id="times5" pattern="[0-9]*" type="number" placeholder="times in the past month">
                 <a href="#" id="q54Btn" onClick="q54()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err54" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="55">
-                <label for="times6">How many times in the <strong>past year</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took an action?</label>
+                <label for="times6">How many times in the <strong>past year</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took any action?</label>
                 <input name="times7" id="times6" pattern="[0-9]*" type="number" placeholder="times in the past year">
                 <a href="#" id="q55Btn" onClick="q55()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err55" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="56">
-                <label for="times7">How many times in <strong>your life</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took an action?</label>
+                <label for="times7">How many times in <strong>your life</strong> have you been <strong>very close to killing yourself and in the last minute, someone or something else stopped you</strong> before you took any action?</label>
                 <input name="times8" id="times7" pattern="[0-9]*" type="number" placeholder="times in my lifetime">
                 <a href="#" id="q56Btn" onClick="q56()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err56" class="errmsg"><b>Please enter a valid number.</b></p>
