--- a/web/baseline7.html
+++ b/web/baseline7.html
@@ -11,7 +11,7 @@
                 <a href="#" id="bInst7Btn" onClick="bInst7()" class="ui-btn ui-corner-all btnSize2">Start</a>
             </div>
             <div id="88">
-                <p>Difficult falling asleep.</p>
+                <p>Difficulty falling asleep.</p>
                 <fieldset id="q88fd" data-role="controlgroup">
                     <input name="q88Op1" id="q88Op1" value="0" type="radio">
                     <label id="q88lb1" for="q88Op1" class="chkbox">None</label>
@@ -28,7 +28,7 @@
                 <p id="err88" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="89">
-                <p>Difficult staying asleep.</p>
+                <p>Difficulty staying asleep.</p>
                 <fieldset id="q89fd" data-role="controlgroup">
                     <input name="q89Op1" id="q89Op1" value="0" type="radio">
                     <label id="q89lb1" for="q89Op1" class="chkbox">None</label>
@@ -141,7 +141,7 @@
                 <p id="err95" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="96">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q96fd" data-role="controlgroup">
                     <input name="q96Op1" id="q96Op2" value="1" type="radio">
                     <label id="q96lb2" for="q96Op2" class="chkbox">Mild</label>
@@ -208,7 +208,7 @@
                 <p id="err100" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="101">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q101fd" data-role="controlgroup">
                     <input name="q101Op1" id="q101Op2" value="1" type="radio">
                     <label id="q101lb2" for="q101Op2" class="chkbox">Mild</label>
@@ -275,7 +275,7 @@
                 <p id="err105" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="106">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q106fd" data-role="controlgroup">
                     <input name="q106Op1" id="q106Op2" value="1" type="radio">
                     <label id="q106lb2" for="q106Op2" class="chkbox">Mild</label>
@@ -342,7 +342,7 @@
                 <p id="err110" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="111">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q111fd" data-role="controlgroup">
                     <input name="q111Op1" id="q111Op2" value="1" type="radio">
                     <label id="q111lb2" for="q111Op2" class="chkbox">Mild</label>
@@ -409,7 +409,7 @@
                 <p id="err115" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="116">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q116fd" data-role="controlgroup">
                     <input name="q116Op1" id="q116Op2" value="1" type="radio">
                     <label id="q116lb2" for="q116Op2" class="chkbox">Mild</label>
@@ -476,7 +476,7 @@
                 <p id="err120" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="121">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q121fd" data-role="controlgroup">
                     <input name="q121Op1" id="q121Op2" value="1" type="radio">
                     <label id="q121lb2" for="q121Op2" class="chkbox">Mild</label>
@@ -543,7 +543,7 @@
                 <p id="err125" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="126">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q126fd" data-role="controlgroup">
                     <input name="q126Op1" id="q126Op2" value="1" type="radio">
                     <label id="q126lb2" for="q126Op2" class="chkbox">Mild</label>
@@ -610,7 +610,7 @@
                 <p id="err130" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="131">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q131fd" data-role="controlgroup">
                     <input name="q131Op1" id="q131Op2" value="1" type="radio">
                     <label id="q131lb2" for="q131Op2" class="chkbox">Mild</label>
@@ -677,7 +677,7 @@
                 <p id="err135" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="136">
-                <p>how bothered are you by these feelings?</p>
+                <p>How bothered are you by these feelings?</p>
                 <fieldset id="q136fd" data-role="controlgroup">
                     <input name="q136Op1" id="q136Op2" value="1" type="radio">
                     <label id="q136lb2" for="q136Op2" class="chkbox">Mild</label>
