--- a/web/index.html
+++ b/web/index.html
@@ -27,8 +27,10 @@
         <div id="idBlk" class="sur3">
             <input type="text" id="idtxt" value="" placeholder="Enter ID" />
             <a id="stBtn" onclick="idSt()" class="ui-btn ui-corner-all">Start</a>
+            <a id="reBtn" onclick="resendData()" class="ui-btn ui-corner-all">Resend Data</a>
             <p id="err0" class="errmsg"><b>Invalid ID</b></p>
             <p id="err1" class="errmsg"><b>Can't connect to server.</b></p>
+            <p id="err1-1" class="errmsg"><b>No new surveys available at this time.</b></p>
         </div>
     </div>
 </div>
